--- a/bootstrap-b1.html
+++ b/bootstrap-b1.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><bootstrap-b1></bootstrap-b1></title>
+    <title>bootstrap-b1</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
