--- a/bootstrap-b1.html
+++ b/bootstrap-b1.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>bootstrap-b1</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
+    <!-- <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </head>
 <body>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat voluptate culpa dignissimos sed libero omnis.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium possimus dolor ex numquam officiis saepe architecto distinctio atque eum rem illo quis, laudantium quos doloribus repellendus fugit minus eligendi quae!</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas fuga a recusandae consectetur doloremque officia porro libero enim tempora eum architecto, alias temporibus velit.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur iusto accusantium ea libero nihil rem dolore magnam at itaque pariatur.</p>
