--- a/bootstrap-b2.html
+++ b/bootstrap-b2.html
@@ -11,12 +11,12 @@
 
 <body>
     <div class="container">
-        <p class="display-1">First 5 Weeks at CodeFactory</p>
-        <p>
+        <p class="display-1 text-center">First 5 Weeks at CodeFactory</p>
+        <p class="lead">
             I'm finishing my second week at CodeFactory. Here are some of the things I've learned so far and the ones I will learn on the upcoming 3 weeks:
         </p>
-        <p>Git and GitHub</p>
-        <ul class="h6">
+        <p class="display-6 shadow-sm text-decoration-underline text-bg-primary rounded text-center ">Git and GitHub</p>
+        <ul class="shadow-sm text-bg-success rounded">
             <li>What is VC, Necessity, What is Git?</li>
             <li>Installation & Config via Command Line</li>
             <li>Commits, Best Practices, Standards</li>
@@ -25,8 +25,8 @@
             <li>Cloning a project from GitHub to my local machine.</li>
             <li>Publishing a website on GitHub pages.</li>
         </ul>
-        <p>HTML</p>
-        <ul>
+        <p class="display-6 shadow-sm text-decoration-underline text-bg-primary rounded text-center ">HTML</p>
+        <ul class="shadow-sm text-bg-success rounded">
             <li>Using HTML tags to create websites.</li>
             <li>Indenting and organising HTML correctly.</li>
             <li>Incorporating block elements.</li>
@@ -34,8 +34,8 @@
             <li>Using both spans and divs.</li>
             <li>Adding classes and IDs to style HTML with CSS.</li>
         </ul>
-        <p>CSS</p>
-        <ul>
+        <p class="display-6 shadow-sm text-decoration-underline text-bg-primary rounded text-center ">CSS</p>
+        <ul class="shadow-sm text-bg-success rounded">
             <li>Creating a stylesheet.</li>
             <li>Using CSS selectors to specify an HTML element.</li>
             <li>Writing CSS rules to style particular elements in my HTML.</li>
@@ -45,9 +45,9 @@
             <li>The importance of responsive design.</li>
             <li>How to use media queries to dynamically change the appearance of a site based on the user's viewport.</li>
         </ul>
-        <p>SCSS</p>
-        <ul>
-            <li>Intro</li>
+        <p class="display-6 shadow-sm text-decoration-underline text-bg-primary rounded text-center ">SCSS</p>
+        <ul class="shadow-sm text-bg-success">
+        text-center     rounded <li>Intro</li>
             <li>Variables</li>
             <li>Mixins</li>
             <li>Partials</li>
@@ -55,15 +55,15 @@
             <li>Extend</li>
             <li>Nesting</li>
         </ul>
-        <p>Bootstrap</p>
-        <ul>
+        <p class="display-6 shadow-sm text-decoration-underline text-bg-primary rounded text-center ">Bootstrap</p>
+        <ul class="shadow-sm text-bg-success rounded">
             <li>Introduction to Bootstrap</li>
             <li>Bootstrap CDN</li>
             <li>Downloading Bootstrap</li>
             <li>Classes</li>
         </ul>
-        <p>JavaScript</p>
-        <ul>
+        <p class="display-6 shadow-sm text-decoration-underline text-bg-primary rounded text-center ">JavaScript</p>
+        <ul class="shadow-sm text-bg-success rounded">
             <li>JavaScript vs CSS3</li>
             <li>What is programming</li>
             <li>What is JavaScript, how is used & rendered</li>
