--- a/bootstrap-a1.html
+++ b/bootstrap-a1.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>intermediate 2</title>
+    <title>advanced 2</title>
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="row bg-danger"></div>
+            <div class="col">Row 1 Item 1</div>
+            <div class="col">Row 1 Item 2</div>
+        <div class="row bg-warning">
+            <div class="col">Row 2 Item 1</div>
+            <div class="col">Row 2 Item 2</div>
+            <div class="col">Row 2 Item 3</div>
+        </div>
+        <div class="row bg-secondary">
+            <div class="col">Row 3 Item 1</div>
+            <div class="col">Row 3 Item 2</div>
+            <div class="col">Row 3 Item 3</div>
+        </div>
+    </div>
 </body>
 </html>
