--- a/bootstrap-a1.html
+++ b/bootstrap-a1.html
@@ -8,19 +8,20 @@
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body>
-    <div class="container">
-        <div class="row bg-danger"></div>
-            <div class="col">Row 1 Item 1</div>
-            <div class="col">Row 1 Item 2</div>
+    <div class="container text-center">
+        <div class="row bg-danger">
+            <div class="p-0 col-2 rounded-5 col-lg-1 bg-light">Row 1 Item 1</div>
+            <div class="p-0 col-2 rounded-5 offset-8 col-lg-1 offset-lg-10 bg-light">Row 1 Item 2</div>
+        </div>
         <div class="row bg-warning">
-            <div class="col">Row 2 Item 1</div>
-            <div class="col">Row 2 Item 2</div>
-            <div class="col">Row 2 Item 3</div>
+            <div class="p-0 col-2 rounded-5 bg-light">Row 2 Item 1</div>
+            <div class="p-0 col-2 rounded-5 offset-3 bg-light">Row 2 Item 2</div>
+            <div class="p-0 col-2 rounded-5 offset-3 bg-light">Row 2 Item 3</div>
         </div>
         <div class="row bg-secondary">
-            <div class="col">Row 3 Item 1</div>
-            <div class="col">Row 3 Item 2</div>
-            <div class="col">Row 3 Item 3</div>
+            <div class="p-0 rounded-5 col-2 bg-light">Row 3 Item 1</div>
+            <div class="p-0 rounded-5 col-6 bg-light">Row 3 Item 2</div>
+            <div class="p-0 rounded-5 col-3 offset-1 bg-light">Row 3 Item 3</div>
         </div>
     </div>
 </body>
