--- a/bootstrap-b2.html
+++ b/bootstrap-b2.html
@@ -11,7 +11,45 @@
 
 <body>
     <div class="container">
-        <p class="display-1 text-center">First 5 Weeks at CodeFactory</p>
+        <div class="nav position-fixed">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary bg-primary rounded">
+                <div class="container-fluid">
+                  <a class="navbar-brand" href="#">Navbar</a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                      </li>
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Dropdown
+                        </a>
+                        <ul class="dropdown-menu">
+                          <li><a class="dropdown-item" href="#">Action</a></li>
+                          <li><a class="dropdown-item" href="#">Another action</a></li>
+                          <li><hr class="dropdown-divider"></li>
+                          <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link disabled">Disabled</a>
+                      </li>
+                    </ul>
+                    <form class="d-flex" role="search">
+                      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                      <button class="btn btn-outline-light" type="submit">Search</button>
+                    </form>
+                  </div>
+                </div>
+              </nav>
+        </div>
+        <p class="display-1 text-center pt-5">First 5 Weeks at CodeFactory</p>
         <p class="lead">
             I'm finishing my second week at CodeFactory. Here are some of the things I've learned so far and the ones I will learn on the upcoming 3 weeks:
         </p>
@@ -78,10 +116,33 @@
             <li>Handling Errors</li>
             <li>Debugging (using console log)</li>
         </ul>
+        <div id="carouselExample" class="carousel slide w-75 mx-auto">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="https://cdn.pixabay.com/photo/2016/10/25/12/28/iceland-1768744_1280.jpg" class="d-block w-100" alt="waterfall">
+              </div>
+              <div class="carousel-item">
+                <img src="https://cdn.pixabay.com/photo/2020/12/17/08/21/waterfall-5838582_1280.jpg" class="d-block w-100" alt="waterfall">
+              </div>
+              <div class="carousel-item">
+                <img src="https://cdn.pixabay.com/photo/2013/11/26/11/27/niagara-falls-218591_1280.jpg" class="d-block w-100" alt="waterfall">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+
+
     </div>
 
     <!-- Optional JavaScript -->
-
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <!-- Bootstrap Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 
